# exts

./: .gitignore  :  Cargo.toml  flake.nix
crates/extra/: Cargo.toml
crates/extra/src/: action.rs  filter.rs  lib.rs  scorer.rs  sorter.rs
crates/gen-calc/: Cargo.toml
crates/gen-calc/src/: lib.rs
crates/scorer-nucleo/: Cargo.toml
crates/scorer-nucleo/src/: lib.rs
crates/sorter-frecency/: Cargo.toml
crates/sorter-frecency/src/: lib.rs
crates/source-desktop/: Cargo.toml
crates/source-desktop/src/: icon.rs  lib.rs  main.rs
crates/ui-tui/: Cargo.toml
crates/ui-tui/src/: lib.rs
src/: filter.rs  lib.rs  scorer.rs  sorter.rs
