[package]
name = "ltrait-scorer-nucleo"
version = "0.1.0"
edition = "2024"

description = "A scorer(using ltrait-extra) for ltrait"

authors = ["satler <satler@satler.dev>"]

documentation = "https://docs.rs/ltrait-scorer-nucleo/"
homepage = "https://crates.io/crates/ltrait-scorer-nucleo"
repository = "https://github.com/ltrait/scorer-nucleo"

license = "MIT"

[dependencies]
ltrait = "1.0.0"
ltrait-extra = "0.1.0"

nucleo-matcher = "0.3.1"

thiserror = "2.0.12"
