[package]
name = "ltrait-extra"
version = "0.2.0"
edition.workspace = true

description = "Extra components and helpers for LTrait"

authors.workspace = true

documentation = "https://docs.rs/ltrait-extra/"
homepage = "https://crates.io/crates/ltrait-extra"

repository.workspace = true
exclude.workspace = true
license.workspace = true

[dependencies]
ltrait = { workspace = true }
