[package]
name = "ltrait-scorer-nucleo"
version = "0.1.2"
edition.workspace = true

description = "A scorer(using ltrait-extra) for ltrait"

authors.workspace = true

documentation = "https://docs.rs/ltrait-scorer-nucleo/"
homepage = "https://crates.io/crates/ltrait-scorer-nucleo"
repository.workspace = true

exclude.workspace = true

license.workspace = true

[dependencies]
ltrait = { workspace = true }
ltrait-extra = "0.1.0"

nucleo-matcher = "0.3.1"

thiserror = "2.0.12"
