[package]
name = "ltrait-source-desktop"
version = "0.4.1"
edition.workspace = true

description = "A source of FreeDesktopOrg's Desktop Entry for ltrait"

authors.workspace = true

documentation = "https://docs.rs/ltrait-source-desktop/"
homepage = "https://crates.io/crates/ltrait-source-desktop"
repository.workspace = true

exclude.workspace = true
license.workspace = true

[dependencies]
ltrait = "1.0.0"

freedesktop-icons = "0.4.0"
freedesktop-desktop-entry = "0.7.8"
base64 = "0.22.1"
image = "0.25.5"

thiserror = "2.0.12"
