[package]
name = "ltrait-ui-tui"
version = "0.1.2"

edition.workspace = true

description = "the TUI for LTrait"

authors.workspace = true

documentation = "https://docs.rs/ltrait-ui-tui/"
homepage = "https://crates.io/crates/ltrait-ui-tui"
repository = "https://github.com/ltrait/exts"

exclude.workspace = true

license.workspace = true

publish = true

[package.metadata.typos.default.extend-words]
ratatui = "ratatui"

[dependencies]
ltrait = { workspace = true }

crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
tui-input = "0.14.0"

futures = "0.3.31"
tokio = { version = "1.44.1", features = [
  "rt",
  "sync",
  "time",
], default-features = false }
tracing = "0.1.41"
